--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-	"name": "Surveyor",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"browserify-fs": "^1.0.0",
-		"buffer": "^5.0.6",
-		"crypto-browserify": "^3.11.0",
-		"events": "^1.1.1",
-		"osm-p2p": "^1.4.0",
-		"path-browserify": "^0.0.0",
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.4",
-		"stream-browserify": "^2.0.1",
-		"util": "^0.10.3"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "16.0.0-alpha.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "Surveyor",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "haul": "haul start"
+  },
+  "dependencies": {
+    "browserify-fs": "^1.0.0",
+    "buffer": "^5.0.6",
+    "crypto-browserify": "^3.11.0",
+    "events": "^1.1.1",
+    "node-libs-browser": "^2.0.0",
+    "osm-p2p": "^1.4.0",
+    "path-browserify": "^0.0.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.4",
+    "stream-browserify": "^2.0.1",
+    "util": "^0.10.3"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "eslint": "^3.19.0",
+    "haul-cli": "^0.5.0",
+    "jest": "19.0.2",
+    "prettier": "^1.2.2",
+    "react-test-renderer": "16.0.0-alpha.6"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
