--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "asyncstorage-down": "^3.1.1",
-    "browserify-fs": "^1.0.0",
     "buffer": "^5.0.6",
     "crypto-browserify": "^3.11.0",
     "events": "^1.1.1",
@@ -24,6 +23,7 @@
     "util": "^0.10.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "eslint": "^3.19.0",
